MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/PaymentInstallements__c.object-meta.xml
<CustomObject>
    <description>Object to store payment installment details in a payment plan</description>
    <label>Payment Installments</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Installement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Installments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>