MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/BrokerPayout__c.field-meta.xml
<CustomField>
    <fullName>BrokerPayout__c</fullName>
    <description>A field to store the amount of money to be paid to broker for their services</description>
    <label>Broker Payout %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>