MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/InstalmentNumber__c.field-meta.xml
<CustomField>
    <fullName>InstalmentNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instalment Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>