MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/InstalmentPaymentDueDate__c.field-meta.xml
<CustomField>
    <fullName>InstalmentPaymentDueDate__c</fullName>
    <formula>IF(InstalmentNumber__c == &apos;First Payment / Deposit&apos;,&apos;Payable on the Reservation Date&apos;,
IF(InstalmentNumber__c == &apos;Last Payment&apos;,&apos;On Completion&apos;,&apos;Payable on or before&apos;)
&amp;&quot; &quot;&amp;
IF(InstalmentNumber__c &lt;&gt; &apos;Last Payment&apos;, 
	TEXT( DAY(MilestoneDate__c) ) &amp;&quot; &quot;&amp; 
	CASE( TEXT( MONTH(MilestoneDate__c) ), 
		&apos;1&apos;,&apos;January&apos;,
		&apos;2&apos;,&apos;February&apos;,
		&apos;3&apos;,&apos;March&apos;,
		&apos;4&apos;,&apos;April&apos;,
		&apos;5&apos;,&apos;May&apos;,
		&apos;6&apos;,&apos;June&apos;,
		&apos;7&apos;,&apos;July&apos;,
		&apos;8&apos;,&apos;August&apos;,
		&apos;9&apos;,&apos;September&apos;,
		&apos;10&apos;,&apos;October&apos;,
		&apos;11&apos;,&apos;November&apos;,
		&apos;12&apos;,&apos;December&apos;,&apos;&apos;) &amp;&quot; &quot;&amp;
	TEXT( YEAR(MilestoneDate__c)),&apos;&apos;))</formula>
    <label>Instalment Payment Due Date</label>
    <type>Text</type>
</CustomField>