MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/InstalmentPaymentDueDateArabic__c.field-meta.xml
<CustomField>
    <fullName>InstalmentPaymentDueDateArabic__c</fullName>
    <formula>IF(InstalmentNumber__c == &apos;First Payment / Deposit&apos;,&apos;مستحق الدفع بتاريخ توقيع اتفاقية الحجز&apos;,
IF(InstalmentNumber__c == &apos;Last Payment&apos;,&apos;عند الانتهاء&apos;,&apos;مستحق الدفع بتاريخ&apos;)
&amp;&quot; &quot;&amp;
IF(InstalmentNumber__c &lt;&gt; &apos;Last Payment&apos;,
TEXT( DAY(MilestoneDate__c) ) &amp;&quot; &quot;&amp;
CASE( TEXT( MONTH(MilestoneDate__c) ),
&apos;1&apos;,&apos;يناير&apos;,
&apos;2&apos;,&apos;فبراير&apos;,
&apos;3&apos;,&apos;مارس&apos;,
&apos;4&apos;,&apos;أبريل&apos;,
&apos;5&apos;,&apos;مايو&apos;,
&apos;6&apos;,&apos;يونيو&apos;,
&apos;7&apos;,&apos;يوليو&apos;,
&apos;8&apos;,&apos;أغسطس&apos;,
&apos;9&apos;,&apos;سبتمبر&apos;,
&apos;10&apos;,&apos;أكتوبر&apos;,
&apos;11&apos;,&apos;نوفمبر&apos;,
&apos;12&apos;,&apos;ديسمبر&apos;,&apos;&apos;) &amp;&quot; &quot;&amp;
TEXT( YEAR(MilestoneDate__c)),&apos;&apos;) &amp;&quot; &quot;&amp; &apos;أو قبله&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instalment Payment Due Date Arabic</label>
    <type>Text</type>
</CustomField>