MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/Is_Maintenance_Installment__c.field-meta.xml
<CustomField>
    <fullName>Is_Maintenance_Installment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Maintenance Installment</label>
    <type>Checkbox</type>
</CustomField>