MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/IsHandoverPayment__c.field-meta.xml
<CustomField>
    <fullName>IsHandoverPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A field to check whether it&apos;s a handover payment</description>
    <label>Is Handover Payment</label>
    <type>Checkbox</type>
</CustomField>