MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <description>A field to store milestone percentage</description>
    <label>Milestone %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>