MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/Milestone_Due__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Due__c</fullName>
    <formula>IF(
	NOT(ISBLANK(MilestoneInstallment__c)),
	MilestoneInstallment__r.MilestoneDue__c, 
	MilestoneDate__c
)</formula>
    <label>Milestone Due</label>
    <type>Date</type>
</CustomField>