MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/MilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDate__c</fullName>
    <description>A field to store the milestone date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone Date</label>
    <type>Date</type>
</CustomField>