MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/MilestoneInstallment__c.field-meta.xml
<CustomField>
    <fullName>MilestoneInstallment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Milestone</label>
    <referenceTo>Milestone__c</referenceTo>
    <relationshipLabel>Payment Installments</relationshipLabel>
    <relationshipName>Payment_Installments</relationshipName>
    <type>Lookup</type>
</CustomField>