MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/No_Of_Months_To_Add_From_Last_Date__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Months_To_Add_From_Last_Date__c</fullName>
    <defaultValue>3</defaultValue>
    <description>This number field will hold the number of months to add to the last payment installment date.</description>
    <label>No Of Months To Add From Last Date</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>