MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/PaymentInstallment__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstallment__c</fullName>
    <description>Lookup to its related Payment Plan</description>
    <label>Payment Installment</label>
    <referenceTo>PaymentPlan__c</referenceTo>
    <relationshipLabel>Payment Installments</relationshipLabel>
    <relationshipName>Payment_Installments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>