MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/SalesAgentPayout__c.field-meta.xml
<CustomField>
    <fullName>SalesAgentPayout__c</fullName>
    <description>A field to store the amount of money to be paid to sales agent for their services</description>
    <label>Sales Agent Payout %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>