MODON MRE BPDEV/force-app/main/default/objects/PaymentInstallements__c/fields/SPA_Instalment_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Instalment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Instalment Date</label>
    <type>Date</type>
</CustomField>